# Bayernstein

./: '  .clang-format  .clang-tidy  .env.example  .gitignore  Body.cpp  Body.h  CImageManager.cpp  CImageManager.h  CMakeLists.txt  CWorld.cpp  CWorld.h  CircularBuffer.cpp  CircularBuffer.h  Console.cpp  Console.h  Intersections.cpp  Intersections.h  LICENSE  LoadingScreen.cpp  LoadingScreen.h  README.md  Shape.h  ShapeSphere.h  TestClass.cpp  TestClass.h  camera.cpp  camera.h  cmake_version.h.in  collision.cpp  collision.h  command.cpp  command.h  commands.cpp  commands.h  game.cpp  game.h  globals.h  hkd_interface.h  image.cpp  (+48 more)
.github/actioins/: setup.yaml
.github/actions/setup/: action.yaml
.github/workflows/: build.yaml  lint.yaml  win-build.yaml
Audio/: Audio.cpp  Audio.h  DynamicSound.cpp  DynamicSound.h
Clock/: Clock.cpp  Clock.h  clock.cpp  clock.h
Console/: CommandManager.cpp  CommandManager.h  Console.cpp  Console.h  VariableManager.cpp  VariableManager.h  Variables.cpp  Variables.h
Entity/: BaseGameEntity.cpp  BaseGameEntity.h  EntityManager.cpp  EntityManager.h  TODO.md  base_game_entity.cpp  base_game_entity.h  entity_manager.cpp  entity_manager.h  moving_entity.cpp  moving_entity.h  steering_behaviour.cpp  steering_behaviour.h
Entity/Door/: g_door.cpp  g_door.h  g_door_states.cpp  g_door_states.h
Entity/Enemy/: Enemy.cpp  Enemy.h  EnemyStates.cpp  EnemyStates.h  enemy.cpp  g_enemy.cpp  g_enemy.h  g_enemy_states.cpp  g_enemy_states.h
Entity/FSM/: State.h  StateMachine.h
Entity/FirstPersonPlayer/: g_fp_player.cpp  g_fp_player.h  g_fp_player_states.cpp  g_fp_player_states.h
Entity/FlyCamera/: g_fly_camera.cpp  g_fly_camera.h
Entity/FollowCamera/: g_follow_camera.cpp  g_follow_camera.h
Entity/Message/: MessageDispatcher.cpp  MessageDispatcher.h
Entity/Player/: Player.cpp  Player.h  PlayerStates.cpp  PlayerStates.h  g_player.cpp  g_player.h  g_player_states.cpp  g_player_states.h  player.cpp
Entity/Weapon/: g_weapon.cpp  g_weapon.h
FSM/: State.h  StateMachine.h  istate.h  state_machine.h
Message/: MessageDispatcher.cpp  MessageDispatcher.h  Telegram.h  g_extra_info_types.h  message_dispatcher.cpp  message_dispatcher.h  message_type.h  telegram.h
Path/: path.cpp  path.h
assets/: config.cfg  imgui.ini
assets/compiled/room/: room.hdr  room.json  room.ply
assets/compiled/test_map_open/: test_map_open.hdr  test_map_open.json  test_map_open.ply
assets/compiled_2/room/: room.hdr  room.json  room.ply
assets/maps/: enemy_test.map  minimal.map  room.map  solid_colors.map
assets/shaders/: brush.frag  brush.vert  colliders.frag  colliders.vert  composite.frag  composite.vert  entities.vert  font.frag  font.vert  primitives.frag  primitives.vert  screenspace2d.frag  screenspace2d.vert  shapes2d.frag  shapes2d.vert  sprite.frag  sprite.vert  world.frag  world.vert
dependencies/soloud/include/: soloud.h
presentation/milestone_2/: global-bottom.vue  package-lock.json  package.json  slides.md
presentation/milestone_2/pages/: bene.md  fabi.md  johann.md  michi.md  nico.md
presentation/milestone_2/public/biblio/: references.bib
presentation/milestone_3/: package-lock.json  package.json  slides.md
presentation/milestone_3/.slidev/snapshots/: snapshots.json
presentation/milestone_3/pages/: bene.md  demo.md  fabi.md  johann.md  michi.md  nico.md
presentation/milestone_3/public/biblio/: references.bib
presentation/milestone_3/public/img/bene/: dune-2-austin-butler-feyd-rautha-black-white-explained.avif
presentation/milestone_4/: package.json  slides.md
presentation/milestone_4/components/: Today.vue
presentation/milestone_4/pages/: bene.md  fabi.md  johann.md  nico.md
tools/: format.sh  lint.sh
tools/converter/: converter.py
tools/lightmapper/: CMakeLists.txt  command_clipboard.txt  cp_lightmaps.sh  light_map.hdr  lightmapper.ipynb  lightmapper.py  main.cpp  map_compiler.py  map_compiler.spec  mapcompiler-0.1-macos.spec  read_lightmapper_binary_usage.cpp  readme.md  renderer.py  requirements.txt  setup.py  test.ipynb  test.py  test2.py
tools/lightmapper/data_structures/: bounding_box.py  bvh_node.py  color.py  compiled_triangle.py  compiled_vertex.py  entity.py  frame.py  line_segment.py  material.py  mesh.py  patch.py  point_light.py  scene.py  shape.py  triangle.py  vector3f.py
tools/lightmapper/examples/: Makefile  read_lightmapper_bin  read_lightmapper_binary_usage.cpp
tools/lightmapper/lightmaps/: test_scene_test.hdr
tools/lightmapper/shaders/: fragment.txt  fragment_old.txt  lineFragment.txt  lineVertex.txt  vertex.txt
tools/lightmapper/souper/: CMakeLists.txt  README.md  main.cpp
tools/lightmapper/temp/: lightmap.hdr  temp.json
tools/lightmapper/util/: geometry.py  hemicube.py  shader.py  uv_mapper.py
utils/: math.cpp  quick_math.cpp  quick_math.h  utils.cpp  utils.h
